--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-requirejs": "^0.4.4",
     "grunt-shell": "^1.1.1",
+    "grunt-strip-code": "^0.1.2",
     "mocha-phantomjs": "^3.6.0",
     "phantomjs": "1.9.7-15",
     "requirejs": "^2.1.8"
