--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.0.1",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-requirejs": "^0.4.4",
+    "grunt-contrib-uglify": "^0.11.0",
+    "grunt-filerev": "^2.3.1",
+    "grunt-processhtml": "^0.3.8",
     "grunt-shell": "^1.1.1",
     "grunt-strip-code": "^0.1.2",
+    "grunt-usemin": "^3.1.1",
     "mocha-phantomjs": "^3.6.0",
     "phantomjs": "1.9.7-15",
     "requirejs": "^2.1.8"
