--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,9 @@
   ],
   "dependencies": {
     "material-design-lite": "~1.0.6",
-    "requirejs": "~2.1.22"
+    "requirejs": "~2.1.22",
+    "es6-promise": "~3.0.2",
+    "lodash": "3.10.1-amd"
   },
   "devDependencies": {
     "sinon": "1.17.2",
