add missing dep from bower json

--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "requirejs": "~2.1.22",
     "es6-promise": "~3.0.2",
     "lodash": "3.10.1-amd",
-    "Element.closest": "closest#~1.0.3"
+    "Element.closest": "closest#~1.0.3",
+    "qwest": "~2.2.6"
   },
   "devDependencies": {
     "sinon": "1.17.2",
