add http-server as a service to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ before_install:
 install:
   - npm install
   - bower install
-before_script: http-server
+services:
+  - http-server
 script: grunt mocha
 after_success: "./travis.sh"
 env:
