--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ before_install:
 install:
   - npm install
   - bower install
-services:
+before_script:
   - http-server
+  - sleep 3
 script: grunt mocha
 after_success: "./travis.sh"
 env:
