--- a/package.json
+++ b/package.json
@@ -3,23 +3,32 @@
   "version": "0.0.1",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-concurrent": "~2.1.0",
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-htmlmin": "~0.6.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-uglify": "^0.11.0",
+    "grunt-contrib-watch": "~0.6.1",
     "grunt-filerev": "^2.3.1",
     "grunt-processhtml": "^0.3.8",
     "grunt-shell": "~1.1.2",
     "grunt-strip-code": "^0.1.2",
     "grunt-usemin": "^3.1.1",
-    "mocha-phantomjs": "^3.6.0",
-    "phantomjs": "1.9.7-15",
-    "requirejs": "^2.1.8",
-    "grunt-contrib-htmlmin": "~0.6.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-concurrent": "~2.1.0"
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.19",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-mocha": "^0.2.1",
+    "karma-phantomjs-launcher": "^0.2.3",
+    "karma-requirejs": "^0.2.3",
+    "karma-sinon": "^1.0.4",
+    "mocha": "^2.3.4",
+    "phantomjs": "^1.9.19",
+    "requirejs": "^2.1.8"
   },
   "dependencies": {}
 }
