--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - "node"
 before_install:
   - npm install -g grunt-cli
-  - npm install -g http-server
+  - npm install -g karma-cli
   - npm install -g bower
 install:
   - npm install
