--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "application-name",
+  "name": "Todo",
+  "author": "Dmitry Kabardinov",
   "version": "0.0.1",
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -19,16 +20,15 @@
     "grunt-usemin": "^3.1.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.19",
-    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.6",
     "karma-mocha": "^0.2.1",
     "karma-phantomjs-launcher": "^0.2.3",
     "karma-requirejs": "^0.2.3",
-    "karma-sinon": "^1.0.4",
     "mocha": "^2.3.4",
     "phantomjs": "^1.9.19",
-    "requirejs": "^2.1.8"
+    "requirejs": "^2.1.8",
+    "phantomjs-polyfill": "0.0.1"
   },
   "dependencies": {}
 }
