--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.1",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-concurrent": "~2.1.0",
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.2",
@@ -12,7 +11,6 @@
     "grunt-contrib-htmlmin": "~0.6.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-uglify": "^0.11.0",
-    "grunt-contrib-watch": "~0.6.1",
     "grunt-filerev": "^2.3.1",
     "grunt-processhtml": "^0.3.8",
     "grunt-shell": "~1.1.2",
@@ -28,7 +26,9 @@
     "mocha": "^2.3.4",
     "phantomjs": "^1.9.19",
     "requirejs": "^2.1.8",
-    "phantomjs-polyfill": "0.0.1"
+    "phantomjs-polyfill": "0.0.1",
+    "grunt-karma": "~0.12.1",
+    "http-server": "~0.8.5"
   },
   "dependencies": {}
 }
