--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "Todo",
   "author": "Dmitry Kabardinov",
   "version": "0.0.1",
+  "scripts": {
+      "start": "karma start & http-server -c-1 > /dev/null",
+      "test": "karma start --singleRun",
+      "postinstall": "bower install",
+      "prebuild": "npm test",
+      "build": "grunt"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.7.0",
@@ -13,7 +20,6 @@
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-filerev": "^2.3.1",
     "grunt-processhtml": "^0.3.8",
-    "grunt-shell": "~1.1.2",
     "grunt-strip-code": "^0.1.2",
     "grunt-usemin": "^3.1.1",
     "jasmine-core": "^2.4.1",
@@ -27,7 +33,6 @@
     "phantomjs": "^1.9.19",
     "requirejs": "^2.1.8",
     "phantomjs-polyfill": "0.0.1",
-    "grunt-karma": "~0.12.1",
     "http-server": "~0.8.5"
   },
   "dependencies": {}
