fix repository field in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Todo",
-  "repository": "https://github.com/dKab/todo",
+  "repository": "https://github.com/dKab/todo.git",
   "author": "Dmitry Kabardinov",
   "version": "0.0.1",
   "scripts": {
